# Pomodoro

./: .gitignore  Makefile  README.md  alembic.ini  dependency.py  docker-compose.test.yml  docker-compose.yml  exceptions.py  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 168edd869e91_first_init.py  affe58e132d9_.py  c5acdbdd4c79_.py  c6b19d4d1848_.py  c881305beabf_.py  dc951f0a6ccd_.py  fa56b9f469da_.py  fd3ccea49fb7_.py
app/: dependency.py  exceptions.py  main.py
app/infrastructure/cache/: __init__.py  accessor.py
app/infrastructure/database/: __init__.py  accessor.py
app/tasks/: handlers.py  models.py  schema.py  service.py
app/tasks/repository/: __init__.py  cache_task.py  task.py
app/users/auth/: handlers.py  schema.py  service.py
app/users/auth/clients/: __init__.py  google.py
app/users/user_profile/: handlers.py  models.py  repository.py  schema.py  service.py
cache/: __init__.py  accessor.py
client/: google.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  users.py
infrastructure/: gunicorn.conf.py
models/: __init__.py  tasks.py  user.py
repository/: __init__.py  cache_task.py  task.py  user.py
schema/: __init__.py  task.py
service/: __init__.py  auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/: infrastructure.py
tests/fixtures/auth/: auth_service.py  clients.py
tests/fixtures/users/: user_model.py  user_repository.py
tests/integrations/auth/: test_auth_service.py
tests/unit/auth/: test_auth_service.py
