[project]
name = "pomodoro"
version = "0.1.0"
description = ""
authors = [
    { name = "Yevhenii Ravliuk", email = "41680988+ravlyuk@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.123.4,<0.124.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "greenlet (>=3.3.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pytest (>=8.2.0,<9.0.0)",
    "pytest-asyncio (>=0.25.0,<0.26.0)",
    "twisted (>=25.5.0,<26.0.0)",
    "faker (>=39.0.0,<40.0.0)",
    "pytest-factoryboy (>=2.8.1,<3.0.0)",
]


[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
